[tool.poetry]
name = "raycraft"
version = "0.1.0"
description = "FastAPI + Ray = <3"
packages = [{ include = "raycraft", from = "src" }]
authors = []

readme = "README.md"
include = [
    "README.md",
    "LICENSE.txt",
    "src/raycraft/py.typed",
]
exclude = [
    "*.so",
    "*.pyc",
    "*~",
    "#*",
    ".git*",
    ".coverage*",
    "DS_Store",
    "__pycache__",
]


[tool.poetry.dependencies]
python = ">=3.9, <3.11"
ray = {extras = ["serve"], version = "^2.8.0"}
fastapi = "^0.99.0"
transformers = "^4.35.0"
torch = "^2.1.0"
varname = "^0.12.0"

[tool.poetry.dev-dependencies]
# type hints
mypy = "1.3.0"
# formatting
black = "23.3.0"
# linting
ruff = "0.0.269"
# import sorting
isort = "5.12.0"
# testing
pytest = "7.3.1"
pytest-sugar = "0.9.7"
# on-demand environments
nox = "2023.4.22"
nox-poetry = "1.0.2"

[tool.poetry.group.dev.dependencies]
ipython = "8.11"

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
warn_no_return = false
allow_untyped_defs = true
allow_untyped_decorators = true

[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = ["raycraft"]
order_by_type = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
